@@ -32,6 +32,7 @@ wxPreviewFrame *        O_WXOBJECT
 wxPlPreviewFrame *      O_WXOBJECT
 wxPrintFactory *        O_NON_WXOBJECT
 wxPrintPaperType *      O_WXOBJECT
+wxPrintPaperDatabase *  O_NON_WXOBJECT
 
 wxDuplexMode            T_ENUM
 wxPaperSize             T_ENUM
